--- a/components/header.html
+++ b/components/header.html
@@ -12,38 +12,54 @@
     <!-- Desktop Navigation -->
     <nav class="navbar-center hidden lg:flex" role="navigation" aria-label="Navigation principale">
       <ul class="menu menu-horizontal px-1 gap-1">
-        <li><a href="index.html" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg focus:ring-2 focus:ring-orange-500">Accueil</a></li>
+        <li><a href="index.html" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg">Accueil</a></li>
         
         <li class="dropdown dropdown-hover">
-          <button tabindex="0" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg cursor-pointer focus:ring-2 focus:ring-orange-500" aria-haspopup="true" aria-expanded="false">
-            Le Club
-            <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" aria-hidden="true">
+          <button tabindex="0" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg cursor-pointer">
+            Le Concept
+            <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
               <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
             </svg>
           </button>
           <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 dark:bg-gray-800 rounded-xl w-56 mt-3 border border-gray-200 dark:border-gray-700">
-            <li><a href="programmes.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Programmes</a></li>
-            <li><a href="methode.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Notre approche</a></li>
+            <li><a href="concept.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Notre vision</a></li>
+            <li><a href="methode.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Méthode scientifique</a></li>
+            <li><a href="enjeux.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Les enjeux</a></li>
+            <li><a href="recherche.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">La recherche</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown dropdown-hover">
+          <button tabindex="0" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg cursor-pointer">
+            Le Programme
+            <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
+            </svg>
+          </button>
+          <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 dark:bg-gray-800 rounded-xl w-56 mt-3 border border-gray-200 dark:border-gray-700">
+            <li><a href="programmes.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Séances & modules</a></li>
+            <li><a href="academie.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">L'académie</a></li>
             <li><a href="jeux.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Nos jeux</a></li>
             <li><a href="charte.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Charte & sécurité</a></li>
           </ul>
         </li>
 
         <li class="dropdown dropdown-hover">
-          <button tabindex="0" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg cursor-pointer focus:ring-2 focus:ring-orange-500" aria-haspopup="true" aria-expanded="false">
-            Infos pratiques
-            <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" aria-hidden="true">
+          <button tabindex="0" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg cursor-pointer">
+            Informations
+            <svg class="fill-current w-4 h-4 ml-1 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
               <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
             </svg>
           </button>
           <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 dark:bg-gray-800 rounded-xl w-56 mt-3 border border-gray-200 dark:border-gray-700">
-            <li><a href="infos-tarifs.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Infos & tarifs</a></li>
+            <li><a href="infos-tarifs.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Tarifs & inscriptions</a></li>
             <li><a href="faq.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">FAQ</a></li>
-            <li><a href="contact.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Contact</a></li>
+            <li><a href="a-propos.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">À propos</a></li>
+            <li><a href="educateurs.html" class="hover:bg-orange-50 dark:hover:bg-orange-950 hover:text-orange-600 dark:hover:text-orange-400 dark:text-gray-300">Pour éducateurs</a></li>
           </ul>
         </li>
 
-        <li><a href="recherche.html" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg focus:ring-2 focus:ring-orange-500">La recherche</a></li>
+        <li><a href="contact.html" class="font-medium text-gray-700 dark:text-gray-300 hover:text-orange-600 dark:hover:text-orange-400 hover:bg-orange-50 dark:hover:bg-orange-950 rounded-lg">Contact</a></li>
       </ul>
     </nav>
 
@@ -52,8 +68,7 @@
       <button 
         id="theme-toggle" 
         class="btn btn-ghost btn-circle"
-        aria-label="Basculer le thème"
-        title="Basculer entre mode clair et sombre">
+        aria-label="Basculer le thème">
         <svg class="swap-off fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="sun-icon">
           <path d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"/>
         </svg>
@@ -63,35 +78,49 @@
       </button>
       
       <!-- CTA Button Desktop -->
-      <a href="mailto:info@ludusmentis.be" class="btn btn-primary btn-sm hidden lg:flex text-white">
-        S'inscrire
+      <a href="mailto:info@ludusmentis.be?subject=Préinscription Ludus Mentis 2026" class="btn btn-primary btn-sm hidden lg:flex text-white">
+        Préinscription 2026
       </a>
       
       <!-- Mobile menu button -->
       <div class="dropdown dropdown-end lg:hidden">
-        <button tabindex="0" class="btn btn-square btn-ghost bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 border-2 border-gray-300 dark:border-gray-600" aria-label="Menu navigation mobile">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-700 dark:text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M4 6h16M4 12h16M4 18h16" />
+        <button tabindex="0" class="btn btn-square btn-ghost" aria-label="Menu navigation mobile">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
-        <nav tabindex="0" class="menu menu-compact dropdown-content mt-3 p-4 shadow-2xl bg-base-100 dark:bg-gray-800 rounded-xl w-72 border-2 border-gray-200 dark:border-gray-700 right-0" role="navigation" aria-label="Navigation mobile">
+        <nav tabindex="0" class="menu menu-compact dropdown-content mt-3 p-4 shadow-2xl bg-base-100 dark:bg-gray-800 rounded-xl w-72 border-2 border-gray-200 dark:border-gray-700 right-0">
           <li><a href="index.html" class="text-base py-3 font-medium dark:text-gray-300">Accueil</a></li>
+          
           <li class="menu-title pt-3">
-            <span class="text-gray-600 dark:text-gray-400 text-xs uppercase font-bold">Le Club</span>
+            <span class="text-gray-600 dark:text-gray-400 text-xs uppercase font-bold">Le Concept</span>
           </li>
-          <li><a href="programmes.html" class="pl-4 py-2 dark:text-gray-300">Programmes</a></li>
-          <li><a href="methode.html" class="pl-4 py-2 dark:text-gray-300">Notre approche</a></li>
+          <li><a href="concept.html" class="pl-4 py-2 dark:text-gray-300">Notre vision</a></li>
+          <li><a href="methode.html" class="pl-4 py-2 dark:text-gray-300">Méthode scientifique</a></li>
+          <li><a href="enjeux.html" class="pl-4 py-2 dark:text-gray-300">Les enjeux</a></li>
+          <li><a href="recherche.html" class="pl-4 py-2 dark:text-gray-300">La recherche</a></li>
+          
+          <li class="menu-title pt-3">
+            <span class="text-gray-600 dark:text-gray-400 text-xs uppercase font-bold">Le Programme</span>
+          </li>
+          <li><a href="programmes.html" class="pl-4 py-2 dark:text-gray-300">Séances & modules</a></li>
+          <li><a href="academie.html" class="pl-4 py-2 dark:text-gray-300">L'académie</a></li>
           <li><a href="jeux.html" class="pl-4 py-2 dark:text-gray-300">Nos jeux</a></li>
           <li><a href="charte.html" class="pl-4 py-2 dark:text-gray-300">Charte & sécurité</a></li>
+          
           <li class="menu-title pt-3">
-            <span class="text-gray-600 dark:text-gray-400 text-xs uppercase font-bold">Infos pratiques</span>
+            <span class="text-gray-600 dark:text-gray-400 text-xs uppercase font-bold">Informations</span>
           </li>
-          <li><a href="infos-tarifs.html" class="pl-4 py-2 dark:text-gray-300">Infos & tarifs</a></li>
+          <li><a href="infos-tarifs.html" class="pl-4 py-2 dark:text-gray-300">Tarifs & inscriptions</a></li>
           <li><a href="faq.html" class="pl-4 py-2 dark:text-gray-300">FAQ</a></li>
-          <li><a href="recherche.html" class="text-base py-3 font-medium dark:text-gray-300">La recherche</a></li>
+          <li><a href="a-propos.html" class="pl-4 py-2 dark:text-gray-300">À propos</a></li>
+          <li><a href="educateurs.html" class="pl-4 py-2 dark:text-gray-300">Pour éducateurs</a></li>
+          
+          <li><a href="contact.html" class="text-base py-3 font-medium dark:text-gray-300">Contact</a></li>
+          
           <li class="mt-4">
-            <a href="mailto:info@ludusmentis.be" class="btn btn-primary btn-block text-white">
-              S'inscrire
+            <a href="mailto:info@ludusmentis.be?subject=Préinscription Ludus Mentis 2026" class="btn btn-primary btn-block text-white">
+              Préinscription 2026
             </a>
           </li>
         </nav>
@@ -99,59 +128,3 @@
     </div>
   </div>
 </header>
-
-<script>
-  // Theme toggle functionality
-  document.addEventListener('DOMContentLoaded', function() {
-    const themeToggle = document.getElementById('theme-toggle');
-    const sunIcon = document.getElementById('sun-icon');
-    const moonIcon = document.getElementById('moon-icon');
-    
-    // Check for saved theme preference or default to light
-    const currentTheme = localStorage.getItem('theme') || 'light';
-    
-    // Apply saved theme
-    if (currentTheme === 'dark') {
-      document.documentElement.classList.add('dark');
-      document.documentElement.setAttribute('data-theme', 'dark');
-      sunIcon.classList.add('hidden');
-      moonIcon.classList.remove('hidden');
-    }
-    
-    // Toggle theme
-    themeToggle.addEventListener('click', function() {
-      const isDark = document.documentElement.classList.contains('dark');
-      
-      if (isDark) {
-        document.documentElement.classList.remove('dark');
-        document.documentElement.setAttribute('data-theme', 'light');
-        localStorage.setItem('theme', 'light');
-        sunIcon.classList.remove('hidden');
-        moonIcon.classList.add('hidden');
-      } else {
-        document.documentElement.classList.add('dark');
-        document.documentElement.setAttribute('data-theme', 'dark');
-        localStorage.setItem('theme', 'dark');
-        sunIcon.classList.add('hidden');
-        moonIcon.classList.remove('hidden');
-      }
-    });
-    
-    // Keyboard navigation for dropdowns
-    const dropdowns = document.querySelectorAll('.dropdown');
-    dropdowns.forEach(dropdown => {
-      const trigger = dropdown.querySelector('button[tabindex="0"]');
-      const menu = dropdown.querySelector('.dropdown-content');
-      
-      if (trigger && menu) {
-        trigger.addEventListener('keydown', (e) => {
-          if (e.key === 'Enter' || e.key === ' ') {
-            e.preventDefault();
-            const isExpanded = trigger.getAttribute('aria-expanded') === 'true';
-            trigger.setAttribute('aria-expanded', !isExpanded);
-          }
-        });
-      }
-    });
-  });
-</script>
