--- a/components/header.html
+++ b/components/header.html
@@ -17,6 +17,7 @@
         <li><a href="/programmes.html" class="font-medium hover:text-ludus-teal">Programme</a></li>
         <li><a href="/jeux.html" class="font-medium hover:text-ludus-teal">Les jeux</a></li>
         <li><a href="/infos-pratiques.html" class="font-medium hover:text-ludus-teal">Infos pratiques</a></li>
+        <li><a href="/recherche.html" class="font-medium hover:text-ludus-teal">Sources</a></li>
         <li><a href="/a-propos.html" class="font-medium hover:text-ludus-teal">À propos</a></li>
         <li><a href="/contact.html" class="font-medium hover:text-ludus-teal">Contact</a></li>
       </ul>
@@ -41,6 +42,7 @@
           <li><a href="/programmes.html" class="text-base py-3">Programme</a></li>
           <li><a href="/jeux.html" class="text-base py-3">Les jeux</a></li>
           <li><a href="/infos-pratiques.html" class="text-base py-3">Infos pratiques</a></li>
+          <li><a href="/recherche.html" class="text-base py-3">Sources scientifiques</a></li>
           <li><a href="/a-propos.html" class="text-base py-3">À propos</a></li>
           <li><a href="/contact.html" class="text-base py-3 font-medium">Contact</a></li>
           
